# python-clean-arch-template

./: LICENSE  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
src/reflekt/: config.py
src/reflekt/application/common/: command.py  exceptions.py  query.py
src/reflekt/application/user/: dto.py  exceptions.py  interfaces.py
src/reflekt/application/user/queries/: get_user_info_by_id.py
src/reflekt/infrastructure/di/: factory.py
src/reflekt/infrastructure/di/providers/: config.py  persistence.py
src/reflekt/infrastructure/persistence/db/: convertors.py  tables.py
src/reflekt/infrastructure/persistence/db/mappers/: base.py  user.py
src/reflekt/infrastructure/persistence/postgres/: factory.py
src/reflekt/main/: web.py
src/reflekt/presentation/web/: factory.py  user.py
src/reflekt/presentation/web/user/: router.py
