[project]
name = "reflekt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dishka>=1.4.0",
    "fastapi[standart]>=0.115.4",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.387",
]
